<resources>
    <string name="app_name">Homework App</string>
    <string name="app_title">App for Homework 1</string>
    <string name="app_desc">Navigation Component Homework \n by Imregul Kurt</string>
    <string name="home_title">Home Screen</string>
    <string name="home_desc">Enter information</string>
    <string name="home_name_field">Name:</string>
    <string name="home_placeholder_name">Enter your name here</string>
    <string name="home_surname_field">Surname:</string>
    <string name="home_placeholder_surname">Enter your surname here</string>
    <string name="home_button_text">Continue</string>
    <string name="personal_title">Personal Information</string>
    <string name="personal_desc">Enter Your Personal Information</string>
    <string name="personal_name">Name from Args</string>
    <string name="personal_surname">Surname from Args</string>
    <string name="personal_email_field">Email:</string>
    <string name="personal_placeholder_email">Enter your email here</string>
    <string name="personal_phone_field">Phone:</string>
    <string name="personal_placeholder_phone">Enter your phone here</string>
    <string name="personal_button_text">Continue</string>
    <string name="survey_title">Survey</string>
    <string name="survey_name">Name from Data Class</string>
    <string name="survey_surname">Surname from Data Class</string>
    <string name="survey_question_1">Question 1:</string>
    <string name="survey_placeholder_q1">What is your favorite movie?</string>
    <string name="survey_question_2">Question 2:</string>
    <string name="survey_placeholder_q2">What are your hobbies?</string>
    <string name="survey_question_3">Question 3:</string>
    <string name="survey_placeholder_q3">What is your favorite food?</string>
    <string name="survey_button">Continue</string>
    <string name="result_title_text">Results</string>
    <string name="result_name_text">Name:</string>
    <string name="result_data_name">Name from Data Class</string>
    <string name="result_surname_text">Surname:</string>
    <string name="result_data_surname">Surname from Data Class</string>
    <string name="result_email_text">Email:</string>
    <string name="result_data_email">Email from Data Class</string>
    <string name="result_phone_text">Phone:</string>
    <string name="result_data_phone">Phone from Data Class</string>
    <string name="result_q1_text">Question 1:</string>
    <string name="result_data_q1">Question 1 from Data Class</string>
    <string name="result_q2_text">Question 2:</string>
    <string name="result_data_q2">Question 2 from Data Class</string>
    <string name="result_q3_text">Question 3:</string>
    <string name="result_data_q3">Question 3 from Data Class</string>
    <string name="result_button">Finish</string>
</resources>