<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA77D8"
    tools:context=".ui.personal.PersonalFragment">

    <TextView
        android:id="@+id/personal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="monospace"
        android:text="@string/personal_title"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:text="@string/personal_name"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_title" />

    <TextView
        android:id="@+id/personal_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:text="@string/personal_surname"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_name" />

    <TextView
        android:id="@+id/personal_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        android:text="@string/personal_email_field"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_surname" />

    <EditText
        android:id="@+id/personal_email_input"
        android:layout_width="303dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint='@string/personal_placeholder_email'
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_email" />

    <TextView
        android:id="@+id/personal_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:text="@string/personal_phone_field"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_email_input" />

    <EditText
        android:id="@+id/personal_phone_input"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/personal_placeholder_phone"
        android:autofillHints="phone"
        android:inputType="phone"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_phone" />

    <Button
        android:id="@+id/personal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:fontFamily="monospace"
        android:text="@string/personal_button_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>